# pap_full

./: README.md
gbk/Common/: Array_Base.cpp  Array_Base.h  Assertx.cpp  Assertx.h  BaseType.h  BuffImpactMgr.cpp  CampDataMgr.cpp  Chain.cpp  DB_Struct.cpp  DB_Struct.h  DirectlyImpactMgr.cpp  Encoder.h  FileAPI.h  FileDataMgr.cpp  FileDataMgr.h  FoxEncrypt.cpp  FoxEncrypt.h  FoxNet.lib  GameDefine.h  GameDefine2.h  GameDefine_Attr.h  GameDefine_City.h  GameDefine_Guild.h  GameDefine_Item.h  GameDefine_PlayerShop.h  GameDefine_Result.cpp  GameDefine_Result.h  GameDefine_Scene.h  GameStruct.cpp  GameStruct.h  GameStruct_AttribUp.h  GameStruct_Bus.cpp  GameStruct_Bus.h  GameStruct_City.h  GameStruct_Country.h  GameStruct_Finger.cpp  GameStruct_Finger.h  GameStruct_Guild.h  GameStruct_HorseFindMate.cpp  GameStruct_Impact.h  (+43 more)
gbk/Common/Combat/: CampAndStand.cpp  CampAndStand.h  DataRecords.cpp  DataRecords.h  SpecialObjData.cpp  TemplateManager.cpp  TemplateManager.h
gbk/Common/DBSystem/DataBase/: DBAbilityList.cpp  DBCharCreate.cpp  DBCharCreate.h  DBCharExtraInfo.cpp  DBCharExtraInfo.h  DBCharExtradbVersion.cpp  DBCharExtradbVersion.h  DBCharFullData.cpp  DBCharFullData.h  DBCharList.cpp  DBCharSaveLock.cpp  DBCharSaveLock.h  DBCharVisualGem.cpp  DBCharVisualGem.h  DBChardbVersion.cpp  DBChardbVersion.h  DBCheckCharName.cpp  DBCheckCharName.h  DBCityInfo.cpp  DBCityInfo.h  DBClearDupItemList.cpp  DBClearDupItemList.h  DBCommitShopInfo.cpp  DBCommitShopInfo.h  DBCoolDownInfo.cpp  DBCrcInfo.cpp  DBCrcInfo.h  DBCreateCharOp.cpp  DBCreateCharOp.h  DBDeleteCharOp.cpp  (+41 more)
gbk/Common/DataBase/: WXSJ_DBC.cpp  WXSJ_DBC.h
gbk/Common/Packets/: BLRetAccCheck.cpp  BLRetAccCheck.h  BLRetAskBuy.cpp  BLRetAskBuy.h  BLRetAskPoint.cpp  BLRetAskPoint.h  BLRetAuth.cpp  BLRetAuth.h  BLRetBillingEnd.cpp  BLRetBillingEnd.h  BLRetBillingKeep.cpp  BLRetBillingKeep.h  BLRetBillingStart.cpp  BLRetBillingStart.h  BLRetConnect.cpp  BLRetConnect.h  BLRetKeepLive.cpp  BLRetKeepLive.h  BLRetKickAll.cpp  BLRetKickAll.h  BLRetPrize.cpp  BLRetPrize.h  BLRetRegPassPort.cpp  BLRetRegPassPort.h  CGApplyPrivateInfo.cpp  CGApplyPrivateInfo.h  CGAskActiveTimeUpdate.cpp  CGAskBeginSubTrain.cpp  CGAskBeginSubTrain.h  CGAskChangeScene.cpp  CGAskDetailAbilityInfo.cpp  CGAskDetailAttrib.cpp  CGAskDetailEquipList.cpp  CGAskDetailEquipList.h  CGAskDetailMountList.cpp  CGAskDetailMountList.h  CGAskDetailSkillList.cpp  CGAskDetailXinFaList.cpp  CGAskDetailXinFaList.h  CGAskEndSubTrain.cpp  (+953 more)
gbk/Common/Utilities/: SplitStringBase.cpp  SplitStringBase.h  SplitStringLevelOne.cpp  SplitStringLevelOne.h  SplitStringLevelTwo.cpp  SplitStringLevelTwo.h
gbk/Run/: README.md
gbk/Run/Client/: README.md
gbk/Run/Public/: README.md
gbk/client/Client/: Client.sln  ClientStatic.sln  Readme.txt
gbk/logs/devlog/: windowstolinuxcn.txt
gbk/server/: README.md  ReadVcproj.lua  Server.sln  update_CMakeLists.lua
gbk/server/Billing/: Billing.sln  CMakeLists.txt
gbk/server/Login/: CMakeLists.txt
gbk/server/Server/: CMakeLists.txt  Server.sln
gbk/server/Server/FoxScriptLib/FoxScriptEngine/Src/: CMakeLists.txt  FoxDebug.h  FoxLuaScript.cpp  FoxLuaScript.h  FoxScript.cpp  FoxScript.h  LuaLib.h  ScriptEngine.vcproj
gbk/server/Server/FoxScriptLib/LuaLib/src/: CMakeLists.txt  LuaLib.vcproj  Makefile  ldo.c  lextend.c  lua.h  luaextend.h
gbk/server/ShareMemory/: CMakeLists.txt  ShareMemory.sln
gbk/server/SqlScript/: wxsj2_20100414_init.sql
gbk/server/World/: CMakeLists.txt  World.sln
gbk/tools/BugDeliver/: BugDeliver.vbp  BugDeliver.vbw  Form_BugDeliver.frm
gbk/tools/DumpMonitorW/: DumpMonitorW.sln
(+3983 files in other folders)
